--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class="inner">
 									<h2>University of Texas at Dallas</h2>
 									<h3>Master of Science in Information Technology and Management</br>2019 - Present</h3>
-									<p>CGPA: 3.67/4</p>
+									<p>CGPA: 3.6/4</p>
 									<ul class="actions">
 										<li><a href="UTD.html" class="button">Learn more</a></li>
 									</ul>
@@ -85,7 +85,7 @@
 					<section class="wrapper style3 fade-up">
 						<div class="inner">
 							<h1 id="two" align="center">Work Experience</h1>
-							<p>To challenge myself and venture out of my comfort zone, I took up internships in fields like finance, marketing and social sciences. These experiences allowed me to use my analytical skills and technical know-how in solving problems of various domains, which expanded my horizons.</p>
+							<p>To challenge myself and venture out of my comfort zone, I took up internships in field of IT. These experiences allowed me to use my analytical skills and technical know-how in solving problems of various domains, which expanded my horizons.</p>
 							<div class="features">
 								<section>
 									<span class="image right"><a href="https://www.ey.com/"><img src="images/EY.png"/></a></span>
