--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class="inner">
 									<h2>University of Texas at Dallas</h2>
 									<h3>Master of Science in Information Technology and Management</br>2019 - Present</h3>
-									<p>CGPA: 3.6/4</p>
+									<p>CGPA: 3.61/4</p>
 									<ul class="actions">
 										<li><a href="UTD.html" class="button">Learn more</a></li>
 									</ul>
@@ -120,7 +120,20 @@
 				</section>
 					<section class="wrapper style2 spotlights">
 						<section>
-							<a href="LDA.html" class="image"><img src="images/twitter-stats.svg" data-position="center center"/></a>
+							<a href="AWC.html" class="image"><img src="images/AWC1.png" data-position="center center"/></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Business Intelligence for Adventure Works Cycles</h2>
+									<h3>May 2020</h3>
+									<p>A Power BI project which imports flat files, analyzes the data and narrates a creative story through interactive dashboards.</p>
+									<ul class="actions">
+										<li><a href="AWC.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="SA.html" class="image"><img src="images/twitter-stats.svg" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Sentiment Analysis using Apache Kafka</h2>
@@ -133,7 +146,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="ARIMA.html" class="image"><img src="images/netflix.jpg" data-position="center center"/></a>
+							<a href="DV.html" class="image"><img src="images/netflix.jpg" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Data Vizualization of Netflix Content</h2>
@@ -146,7 +159,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="ISL.html" class="image"><img src="images/bigdata.jpeg" data-position="center center"/></a>
+							<a href="BD.html" class="image"><img src="images/bigdata.jpeg" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Big Data Analyzing</h2>
@@ -159,7 +172,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="Stockopedia.html" class="image"><span class="image fit"><img src="images/iot.jpg" alt="" data-position="top right" /></span></a>
+							<a href="IOT.html" class="image"><span class="image fit"><img src="images/iot.jpg" alt="" data-position="top right" /></span></a>
 							<div class="content">
 								<div class="inner">
 									<h2>IoT Based on Soil Testing</h2>
