--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
 				</section>
 					<section class="wrapper style2 spotlights">
 						<section>
+							<a href="PD.html" class="image"><img src="images/PD.jpeg" data-position="center center"/></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Parkinson's Disease Detection Using XGBoost</h2>
+									<h3>May 2020</h3>
+									<p>A mini project where machine learning algorithm called XGBoost Classifier is used to detect the presence of this disease in a person based on the individual traits.</p>
+									<ul class="actions">
+										<li><a href="PD.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
 							<a href="AWC.html" class="image"><img src="images/AWC1.png" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
