--- a/AWC.html
+++ b/AWC.html
@@ -33,6 +33,7 @@
 							<h1 class="major">Business Intelligence for Adventure Works Cycles</h1>
 							<span class="image fit"><img src="images/AWC1.png"/></span>
 							<p align="justify">After the completion of my Spring 2020 semester, I decided to get mt hands dirty with an analytical tool where I had already understood the theoritical concepts of it but had limited hands-on experience, Power BI. First things first, I imported the flat files into my Power BI. Then, I designed a data model in the form of star and snowflake schemas and established relationships between the tables. After doing this, I analyzed the data by creating calculated columns and measures using DAX functions and formulae.Filtered data tables using several Power BI functions such as Iterator("X"), COUNT, DATE & TIME, DAX Intelligence formula. Finally after finishing the cleaning process, narrated an interesting story by creating interactive dashboards for executive summary of sales, product details and customer details using Cards & KPIs, Trend Lines and Forecasts, Date Slicers and Gauge Charts.</p>
+							<p>The project file can be found <a href="https://github.com/d-shah11/PowerBI---Adventure-Works-Cycles">here</a>.</p>
 							<!--<p>The project files can be found <a href="#">here</a>.</p>-->
 						</div>
 					</section>
