--- a/DV.html
+++ b/DV.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Dhruv Rakesh Shah</a>
+				<a href="index.html" class="title">Academic Project</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -33,6 +33,7 @@
 							<h1 class="major">Data Visualization of Netflix Content</h1>
 							<span class="image fit"><img src="images/netflix.jpg"/></span>
 							<p align="justify">Before taking my Data Visualization course in Summer 2020, I thought why not experiment and learn different features of Tableau and work on it. So, I decided to visualize a small data of Netflix Movies and TV Shows. I created 4 different stories where one of it showed Top 10 movies based on regions. Another story compared the most viewed TV Shows for different age groups and so on. Finally, I combined these stories into a dashboard where the viewer can analyze all 4 stories simultaneously.</p>
+							<p>The project file can be found <a href="https://github.com/d-shah11/Tableau---Netflix-DV">here</a>.</p>
 						</div>
 					</section>
 
