--- a/BD.html
+++ b/BD.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Dhruv Rakesh Shah</a>
+				<a href="index.html" class="title">Academic Project</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -33,6 +33,7 @@
 							<h1 class="major">Big Data Analyzing</h1>
 							<span class="image fit"><img src="images/bigdata.jpeg"/></span>
 							<p align="justify">This is my first academic project in my graduate coursework. To analyze insurance risk associated with the truck fleet based on geographic location and time using Hortonworks Data Platform tools and techniques. By completing this project, I learnt the concepts of Hadoop DIstributed File System, to write queries on Hive, important difference between MapReduce and Hadoop, to work on Cloudera VMware Workstation and Hue GUI and finally to integrate the data between HDFS and Tableau.</p>
+							<p>The project file can be found <a href="https://github.com/d-shah11/Truck-Fleet---Big-Data-and-Tableau">here</a>.</p>
 							<!--<p>The project files can be found <a href="#">here</a>.</p>-->
 						</div>
 					</section>
