--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
 							<p>To contribute to the broader student community, I participate in various student organizations and clubs which in turn enhances my leadershhip, team-building and communication skills.</p>
 							<div class="features">
 								<section>
+									<span class="img"><img src="images/research.jpg" width="200" /></span>
+									<h2>General Secretary, The Research Club</h2>
+									<h3>June 2020 - Present</h3>
+									<ul>
+										<li>Organized workshops and seminars.</li>	
+										<li>Handled logistics of the events taking place.</li>
+									</ul>
+								</section>
+								<section>
 									<span class="img"><img src="images/envision.png"/></span>
 									<h2>Treasurer, Envision</h2>
 									<h3>May 2020 - Present</h3>
 									<ul>
 										<li>Organized workshops, seminars and bootcamps on visualizations tools like Power BI, Tableau and Excel.</li>	
 										<li>Managed fiscal reports, sponsorship work and operational funds.</li>
-									</ul>
-								</section>
-								<section>
-									<span class="img"><img src="images/research.jpg" width="200" /></span>
-									<h2>Logistics Officer, The Research Club</h2>
-									<h3>Oct 2019 - Present</h3>
-									<ul>
-										<li>Organized workshops and seminars.</li>	
-										<li>Handled mainly logistics of the event.</li>
 									</ul>
 								</section>
 								<section>
