--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<div class="inner">
 									<h2>University of Texas at Dallas</h2>
 									<h3>Master of Science in Information Technology and Management</br>2019 - Present</h3>
-									<p>CGPA: 3.61/4</p>
+									<p>CGPA: 3.71/4</p>
 									<ul class="actions">
 										<li><a href="UTD.html" class="button">Learn more</a></li>
 									</ul>
@@ -88,8 +88,18 @@
 							<p>To challenge myself and venture out of my comfort zone, I took up internships in field of IT. These experiences allowed me to use my analytical skills and technical know-how in solving problems of various domains, which expanded my horizons.</p>
 							<div class="features">
 								<section>
+									<span class="image right"><a href="https://www.twgcompanies.com/"><img src="images/TWG.png"/></a></span>
+									<h2>TWG Companies, Business Analyst Intern</h2>
+									<h3>June 2020 - Aug 2020</h3>
+									<i>TWG companies is a multinational trusted service provider.</i>
+									<ul>
+										<li>Designed Entity Relationship Diagram for different collections and established their JSON schema validation rules for a Web Chat System in MongoDB. Created and validated the designed collections using Mongo Shell commands.</li>
+										<li>Drafted Functional Requirement Document to define system inputs, processes, interfaces and outputs for developers.</li>
+									</ul>
+								</section>
+								<section>
 									<span class="image right"><a href="https://www.ey.com/"><img src="images/EY.png"/></a></span>
-									<h2>Ernst and Young, Business Analyst Intern</h2>
+									<h2>Ernst and Young, Data Analyst Intern</h2>
 									<h3>Dec 2018 - Jan 2019</h3>
 									<i>EY is one of the largest professional services firms in the world.</i>
 									<ul>
