--- a/UTD.html
+++ b/UTD.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Dhruv Rakesh Shah<a>
+				<a href="index.html" class="title">Education<a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -32,7 +32,7 @@
 						<div class="inner">
 							<h1 class="major">M.S. in Information Technology and Management</h1>
 							<span class="image fit"><a href="https://www.utdallas.edu/academics/fact-sheets/jsom/ms-information-technology-and-management/"><img src="images/jsom.jpg" style="width:100%;height:500px;"/></a></span>
-							<p> <br>I am currently pursuing a graduate degree in Information Technology and Management from the Naveen Jindal School of Management at the University of Texas at Dallas. The program offers opportunities for students with special interests to concentrate in a specific track within the IT area where I am focusing on Business Intelligence and Analytics.</p><p>I took the following courses and secured a CGPA of 3.61/4:<br>
+							<p> <br>I am currently pursuing a graduate degree in Information Technology and Management from the Naveen Jindal School of Management at the University of Texas at Dallas. The program offers opportunities for students with special interests to concentrate in a specific track within the IT area where I am focusing on Business Intelligence and Analytics.</p><p>I took the following courses and secured a CGPA of 3.71/4:<br>
 							<ul>Fall 2019:
 								<li>MIS 6382: Object Oriented Programming in Python</li>
 								<li>MIS 6346: Big Data</li>
@@ -43,18 +43,15 @@
 									<li>MIS 6356: Business Analytics with R</li>
 									<li>OPRE 6302: Operations Management</li>
 								</ul>
-							</p>
-							<p>For the Summer 2020 and Fall 2020, I plan on taking the following courses respectively:
-								<ul>
+								<ul>Summer 2020:
 									<li>MIS 6380: Data Visualization</li>
 									<li>MKT 6301: Marketing Management</li>
 								</ul>
-
-								<ul>
+								<ul>Fall 2020:
 									<li>MIS 6341: Applied Machine Learning</li>
 									<li>MIS 6308: System Analysis and Project Management</li>
-									<li>OB 6301: Organizational Behaviour</li>
-								</ul>	
+									<li>MIS 6337: Information Technology Audit and Risk Management</li>
+								</ul>
 							</p>
 						</div>
 					</section>
