--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
 -->
 <html>
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4Q9FZ93RZG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-4Q9FZ93RZG');
-</script>
 		<title>Dhruv Shah</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -47,7 +38,7 @@
 						<div class="inner"> 
 							<h1 align="center">Dhruv Rakesh Shah</h1>
 							<span class="img"><img src="images/self.jpg" style="width:300px;height:300px; float: left; padding-right: 12px"></img></span>
-							<p class="intro" align="justify">I'm a graduate student pursuing Master of Science in Information Technology and Management at the University of Texas at Dallas. I have a Bachelor's Degree in Information Technology from the University of Mumbai. I'm a highly motivated individual with the right technical skills and experience in Python, SQL, R, Tableau and Excel put into practice. Some of my key competencies include Business Analytics, Database Management, Data Visualization.</p>
+							<p class="intro" align="justify">I'm a graduate student pursuing Master of Science in Information Technology and Management at the University of Texas at Dallas. I have a Bachelor's Degree in Information Technology from the University of Mumbai. I'm a highly motivated individual with the right technical skills and experience in Python, SQL, R, Tableau and Excel put into practice. Some of my key competencies include Data Analytics, Data Science, Database Management and Data Visualization.</p>
 							<p class="intro" align="justify">Having understood that the future is going to be all data driven, I am excited and fortunte enough to be a part of it. I am passionate about working with data and solving challenging problems which entails it.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Get Started</a></li>
@@ -97,36 +88,45 @@
 							<p>To challenge myself and venture out of my comfort zone, I took up internships in field of IT. These experiences allowed me to use my analytical skills and technical know-how in solving problems of various domains, which expanded my horizons.</p>
 							<div class="features">
 								<section>
+									<span class="image right"><a href="https://www.utdallas.edu/"><img src="images/UTD.png"/></a></span>
+									<h2>The University of Texas at Dallas, Graduate Teaching Assistant</h2>
+									<h3>August 2020 - December 2020</h3>
+									<i>The University of Texas at Dallas is a public research university holding the #1 rank in best value public university in Texas.</i>
+									<ul>
+										<li>Taught 3 classes in database fundamentals and design using Oracle and MSSQL by explaining basic DDL and DML queries and modeling examples</li>
+										<li>Evaluated weekly quizzes, assignments, exams, and clarified doubts of 20% of the total students</li>
+									</ul>
+								</section>
+								<section>
 									<span class="image right"><a href="https://www.twgcompanies.com/"><img src="images/TWG.png"/></a></span>
 									<h2>TWG Companies, Business Analyst Intern</h2>
-									<h3>June 2020 - Aug 2020</h3>
+									<h3>June 2020 - August 2020</h3>
 									<i>TWG companies is a multinational trusted service provider.</i>
 									<ul>
-										<li>Designed Entity Relationship Diagram for different collections and established their JSON schema validation rules for a Web Chat System in MongoDB. Created and validated the designed collections using Mongo Shell commands.</li>
-										<li>Drafted Functional Requirement Document to define system inputs, processes, interfaces and outputs for developers.</li>
+										<li>Increased performance by 30% of Web based chat system by redesigning and normalizing database in MySQL</li>
+										<li>Leveraged using complex queries and created stored procedures to analyze data for reusability and visualize summarized KPIs and pie charts using Tableau and MS Excel</li>
+										<li>Documented Functional Requirements to define modifications, processes, dos and don’ts for reports</li>>
 									</ul>
 								</section>
 								<section>
 									<span class="image right"><a href="https://www.ey.com/"><img src="images/EY.png"/></a></span>
 									<h2>Ernst and Young, Data Analyst Intern</h2>
-									<h3>Dec 2018 - Jan 2019</h3>
+									<h3>December 2018 - January 2019</h3>
 									<i>EY is one of the largest professional services firms in the world.</i>
 									<ul>
-										<li>Performed transformation operations on datasets (sidewalks and crime reports) using Microsoft Excel.</li>
-										<li>Analyzed the datasets to calculate crimes reported on each sidewalk based on the Euclidean distance between the
-                                            latitudes and longitudes of sidewalk and crime area using Pandas and Numpy in Python on Databricks.</li>
-										<li>Visualized the results based on rank obtained for further research using Matplotlib and Seaborn libraries in 		Python.</li>
+										<li>Cleaned and transformed 2 datasets of 10,000 records using Python libraries such as Pandas and Numpy on Databricks to analyze the crimes reported in the city</li>
+										<li>Visualized results and concluded 85% of sidewalk locations as safe using Matplotlib and Seaborn libraries</li>
 									</ul>
 								</section>
 								<section>
 									<span class="image right"><a href ="https://www.yojnaindia.com/"><img src="images/Yojna.png"/></a></span>
-									<h2>Yojna Technosoft Pvt. Ltd, Database Developer Intern</h2>
+									<h2>Yojna Technosoft Pvt. Ltd, Database Management Intern</h2>
 									<h3>June 2018 - July 2018</h3>
 									<i>Yojna Technosoft Pvt Ltd is a marketing and advertising company based in Mumbai.</i>
 									<ul>
-										<li>Created Entity Relationship diagram of the system using Dia and prepared 3NF Normalized relational schema from 		EER.</li>
-										<li>Validated creation of tables and schema with appropriate constraints on attributes using MySQL.</li>
-										<li>Implemented triggers and stored procedures on the schema to improve data integrity, efficiency and consistency using PL-SQL.</li>
+										<li>Remodeled a database system for a local food delivery chain using Dia and created 3NF normalized schema</li>
+										<li>Created and validated 16 tables and schema with appropriate constraints on attributes using MS SQL Server</li>
+										<li>Implemented triggers and stored procedures, improving data integrity, efficiency and consistency using PL-SQL</li>
 									</ul>
 								</section>
 							</div>
@@ -139,14 +139,14 @@
 				</section>
 					<section class="wrapper style2 spotlights">
 						<section>
-							<a href="PD.html" class="image"><img src="images/PD.jpeg" data-position="center center"/></a>
+							<a href="PD.html" class="image"><img src="images/audio.jpg" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Parkinson's Disease Detection Using XGBoost</h2>
-									<h3>May 2020</h3>
-									<p>A mini project where machine learning algorithm called XGBoost Classifier is used to detect the presence of this disease in a person based on the individual traits.</p>
+									<h2>Spotify Audio Analysis using Machine Learning</h2>
+									<h3>August 2020 - October 2020</h3>
+									<p>A pure applied machine learning project where I used several regression algorithms to predict danceability of 2017 songs on Spotify application using Python.</p>
 									<ul class="actions">
-										<li><a href="PD.html" class="button">Learn more</a></li>
+										<li><a href="ML.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -156,8 +156,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Business Intelligence for Adventure Works Cycles</h2>
-									<h3>May 2020</h3>
-									<p>A Power BI project which imports flat files, analyzes the data and narrates a creative story through interactive dashboards.</p>
+									<h3>August 2020 - October 2020</h3>
+									<p>A project where I imported flat files, analyzed the data using various functions and formulae, and created an executive summary dashboard using Power BI.</p>
 									<ul class="actions">
 										<li><a href="AWC.html" class="button">Learn more</a></li>
 									</ul>
@@ -165,14 +165,14 @@
 							</div>
 						</section>
 						<section>
-							<a href="SA.html" class="image"><img src="images/twitter-stats.svg" data-position="center center"/></a>
+							<a href="PD.html" class="image"><img src="images/PD.jpeg" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sentiment Analysis using Apache Kafka</h2>
-									<h3>Jan 2020 - Mar 2020</h3>
-									<p>A project analyzing tweets of a specified hashtag from Twitter data using Big Data Analytics.</p>
+									<h2>Parkinson's Disease Detection Using XGBoost</h2>
+									<h3>May 2020 - June 2020</h3>
+									<p>A project where machine learning algorithm called XGBoost Classifier is used to detect the presence of this disease in a person based on the individual traits.</p>
 									<ul class="actions">
-										<li><a href="SA.html" class="button">Learn more</a></li>
+										<li><a href="PD.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -182,10 +182,23 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Data Vizualization of Netflix Content</h2>
-									<h3>Dec 2019 - Jan 2020</h3>
-									<p>It is a project which vizualizes and creates dashboards on various movies and tv shows of Netflix in Tableau.</p>
+									<h3>March 2020 - April 2020</h3>
+									<p>Project where I vizualized Netflix data and created dashboard to improve decision making process using MySQL and Tableau.</p>
 									<ul class="actions">
 										<li><a href="DV.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="SA.html" class="image"><img src="images/twitter-stats.svg" data-position="center center"/></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Sentiment Analysis using Big Data</h2>
+									<h3>January 2020 - April 2020</h3>
+									<p>A project where I analyzed the tweets of a particular hashtag from Twitter streaming using Apache Kafka, Elastic Search and Kibana.</p>
+									<ul class="actions">
+										<li><a href="SA.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -195,8 +208,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Big Data Analyzing</h2>
-									<h3>Aug 2019 - Dec 2019</h3>
-									<p>A project which analyzes truck fleet data for the state of California based on geographical paths and time.</p>
+									<h3>August 2019 - December 2019</h3>
+									<p>Analyzed truck fleet data using Hadoop and Hive to visualize the same in Tableau by designing dashboard to visualize the KPIs and improve driver selection.</p>
 									<ul class="actions">
 										<li><a href="BD.html" class="button">Learn more</a></li>
 									</ul>
@@ -208,7 +221,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>IoT Based on Soil Testing</h2>
-									<h3>Aug 2018 - May 2019</h3>
+									<h3>August 2018 - May 2019</h3>
 									<p>A system which monitors soil charachteristics and suggests suitable crops based on the inputs.</p>
 									<ul class="actions">
 										<li><a href="IOT.html" class="button">Learn more</a></li>
