--- a/BD.html
+++ b/BD.html
@@ -32,7 +32,7 @@
 						<div class="inner">
 							<h1 class="major">Big Data Analyzing</h1>
 							<span class="image fit"><img src="images/bigdata.jpeg"/></span>
-							<p align="justify">This is my first academic project in my graduate coursework. To analyze insurance risk associated with the truck fleet based on geographic location and time using Hortonworks Data Platform tools and techniques. By completing this project, I learnt the concepts of Hadoop DIstributed File System, to write queries on Hive, important difference between MapReduce and Hadoop, to work on Cloudera VMware Workstation and Hue GUI and finally to integrate the data between HDFS and Tableau.</p>
+							<p align="justify">This is my first academic project in my graduate coursework. I calculated and normalized the values of risk factor per driver and transferred those CSV files into Cloudera VM. Loaded data into HDFS, formed the separate tables for each parameter and analyzedit using Hive queries. Integrated Hadoop to Tableau using JDBC drivers and designed a dashboard to visualize the KPIs of the company and improve driver selection by 90%.</p>
 							<p>The project file can be found <a href="https://github.com/d-shah11/Truck-Fleet---Big-Data-and-Tableau">here</a>.</p>
 							<!--<p>The project files can be found <a href="#">here</a>.</p>-->
 						</div>
