--- a/DV.html
+++ b/DV.html
@@ -32,7 +32,7 @@
 						<div class="inner">
 							<h1 class="major">Data Visualization of Netflix Content</h1>
 							<span class="image fit"><img src="images/netflix.jpg"/></span>
-							<p align="justify">Before taking my Data Visualization course in Summer 2020, I thought why not experiment and learn different features of Tableau and work on it. So, I decided to visualize a small data of Netflix Movies and TV Shows. I created 4 different stories where one of it showed Top 10 movies based on regions. Another story compared the most viewed TV Shows for different age groups and so on. Finally, I combined these stories into a dashboard where the viewer can analyze all 4 stories simultaneously.</p>
+							<p align="justify">Before taking my Data Visualization course in Summer 2020, I thought why not experiment and learn different features of Tableau and work on it. So, I decided to visualize a small data of Netflix Movies and TV Shows. Used DDL, DML, and Joins on SQL Server Management Studio by cleaning data and creating relational database. Assessed appx. 6200 movies and TV shows based on the genre by designing dashboard using Histogram. Plotted Map and Tree Map to visualize top 5% of the movies, genres and countries using Tableau</p>
 							<p>The project file can be found <a href="https://github.com/d-shah11/Tableau---Netflix-DV">here</a>.</p>
 						</div>
 					</section>
