--- a/SA.html
+++ b/SA.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sentiment Analysis</title>
+		<title>Big Data Analytics</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Dhruv Shah Shah</a>
+				<a href="index.html" class="title">Academic Project</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -30,9 +30,9 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Sentiment Analysis using Apache Kafka</h1>
+							<h1 class="major">Sentiment Analysis using Big Data</h1>
 							<span class="image fit"><img src="images/twitter-stats.svg"/></span>
-							<p align="justify"> The aim of this project was to gain a better understanding of the Big Data Ecosystem where in I learnt how to produce a continuous data stream of a particular topic from Twitter. The next step was to consume these tweets and filter the incoming streaming data to make it more clean. The package 'TextBlob' then calculates the sentiment score. After this, I stored this data to ElasticSearch where it's index is used to visualize data in Kibana.</p>
+							<p align="justify"> The aim of this project was to gain a better understanding of the Big Data Ecosystem where in I learnt how to produce a continuous data stream of a particular topic from Twitter. Processed and indexed streaming data from Twitter using Apache KafkaProducer and tweepy in Python. Extracted features, cleansed tweet text and calculated sentiment score using Text Blob in KafkaConsumer. Designed bar graph and pie chart of streaming data stored in ElasticSearch using Kibana.</p>
 							<!--<p>The project files can be found <a href="https://github.com/''/twitter-topic-modeling">here</a>.</p>-->
 						</div>
 					</section>
