--- a/UTD.html
+++ b/UTD.html
@@ -32,7 +32,7 @@
 						<div class="inner">
 							<h1 class="major">M.S. in Information Technology and Management</h1>
 							<span class="image fit"><a href="https://www.utdallas.edu/academics/fact-sheets/jsom/ms-information-technology-and-management/"><img src="images/jsom.jpg" style="width:100%;height:500px;"/></a></span>
-							<p> <br>I am currently pursuing a graduate degree in Information Technology and Management from the Naveen Jindal School of Management at the University of Texas at Dallas. The program offers opportunities for students with special interests to concentrate in a specific track within the IT area where I am focusing on Business Intelligence and Analytics.</p><p>I took the following courses and secured a CGPA of 3.71/4:<br>
+							<p> <br>I am currently pursuing a graduate degree in Information Technology and Management from the Naveen Jindal School of Management at the University of Texas at Dallas. The program offers opportunities for students with special interests to concentrate in a specific track within the IT area where I am focusing on Business Intelligence and Data Analytics.</p><p>I took the following courses and secured a CGPA of 3.71/4:<br>
 							<ul>Fall 2019:
 								<li>MIS 6382: Object Oriented Programming in Python</li>
 								<li>MIS 6346: Big Data</li>
@@ -46,11 +46,15 @@
 								<ul>Summer 2020:
 									<li>MIS 6380: Data Visualization</li>
 									<li>MKT 6301: Marketing Management</li>
+									<li>MIS 6009: Information Systems Internship</li>>
 								</ul>
 								<ul>Fall 2020:
 									<li>MIS 6341: Applied Machine Learning</li>
 									<li>MIS 6308: System Analysis and Project Management</li>
 									<li>MIS 6337: Information Technology Audit and Risk Management</li>
+								</ul>
+								<ul>Spring 2021:
+									<li>MIS 6349: Digital Consulting Project</li>
 								</ul>
 							</p>
 						</div>
