--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				</section>
 					<section class="wrapper style2 spotlights">
 						<section>
-							<a href="PD.html" class="image"><img src="images/audio.jpg" data-position="center center"/></a>
+							<a href="ML.html" class="image"><img src="images/audio.jpg" data-position="center center"/></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Spotify Audio Analysis using Machine Learning</h2>
